# quantforce

./: .gitignore  .pylintrc  01_simple_main.py  02_hyperparameter_optimization.py  03_continue_training.py  04_robustness_test.py  MANIFEST.in  QUESTIONS.py  Quantforce_colab_example.ipynb  README.md  TODO.py  filter_requirements.py  filtered_requirements.txt  hyperparam.py  hyperparam_Soft-DQN_sharpe_ratio.py  learn_PPO_default_config.py  learn_SAC_default_config.py  learn_TD3_default_config.py  learn_classic_tangency.py  main.py  main2.py  main_test_loading.py  my_finance_frontier.py  pyproject.toml  quantforce.yaml  que.py  run_report_generator.py  setup.py  softDQN_vs_MaxExpReturn.py  test.py
00_Latex/: 00-abstract.tex  04.tex  06.tex  0b_ai_referenzen.bib  0b_berichte.bib  0b_kommentare.bib  0b_online.bib  0b_rechtsprechung.bib  0b_rechtsquellen.bib  0b_sammelwerke.bib  0b_zeitschriftenartikel.bib  99_myglossaries.tex  jkureport.sty  jkureport_backup.sty  main-thesis.blg  main-thesis.glg  main-thesis.glo  main-thesis.run.xml  main-thesis.slg  main-thesis.tex
01_classic_agents/: learn.py  make_report.py
01_classic_agents/REPORT/: metrics_table.tex  report.tex  (+1 more)
02_single_agents_default/: learn_DDPG_default_config.py  learn_SAC_default_config.py  learn_SPQL_default_config.py  make_report.py
03_single_agents_default_t=500k_sr_100w/: learn.py  make_report.py  visualize_agents.py
agents/: __init__.py  create_agent.py  dqn_agent.py  maddpg_agent.py  model_builder.py  ppo_agent.py  random_agent.py  sac_agent.py  up_agent.py
config/: config.py
data/: __init__.py  dataset.py  download.py  downloader.py  formatter.py  get_data.py  preprocessor.py  tickers.py
data_cache/: 000002.SZ_2000-01-01_2023-01-01_1d.csv  AAPL_2020-01-01_2021-01-01_1d.csv  AAPL_2021-01-01_2022-01-01_1d.csv  AAT_2000-01-01_2023-01-01_1d.csv  ADD_2000-01-01_2023-01-01_1d.csv  AIT_2000-01-01_2023-01-01_1d.csv  ALG_2000-01-01_2023-01-01_1d.csv  AMR_2000-01-01_2023-01-01_1d.csv  ASC_2000-01-01_2023-01-01_1d.csv  AWH_2000-01-01_2023-01-01_1d.csv  BC_2000-01-01_2023-01-01_1d.csv  BFZ_2000-01-01_2023-01-01_1d.csv  BGY_2000-01-01_2023-01-01_1d.csv  BHK_2000-01-01_2023-01-01_1d.csv  BIO_2000-01-01_2023-01-01_1d.csv  BLV_2000-01-01_2023-01-01_1d.csv  BMY_2000-01-01_2023-01-01_1d.csv  BNJ_2000-01-01_2023-01-01_1d.csv  BOH_2000-01-01_2023-01-01_1d.csv  BRF_2000-01-01_2023-01-01_1d.csv  BR_2000-01-01_2023-01-01_1d.csv  BSY_2000-01-01_2023-01-01_1d.csv  BTA_2000-01-01_2023-01-01_1d.csv  BVT_2000-01-01_2023-01-01_1d.csv  BWZ_2000-01-01_2023-01-01_1d.csv  BYD_2000-01-01_2023-01-01_1d.csv  CAR_2000-01-01_2023-01-01_1d.csv  COW_2000-01-01_2023-01-01_1d.csv  CRI_2000-01-01_2023-01-01_1d.csv  CVI_2000-01-01_2023-01-01_1d.csv  CWT_2000-01-01_2023-01-01_1d.csv  DEF_2000-01-01_2023-01-01_1d.csv  DG_2000-01-01_2023-01-01_1d.csv  DIT_2000-01-01_2023-01-01_1d.csv  DLB_2000-01-01_2023-01-01_1d.csv  DNH_2000-01-01_2023-01-01_1d.csv  DOW_2000-01-01_2023-01-01_1d.csv  DPG_2000-01-01_2023-01-01_1d.csv  DZZ_2000-01-01_2023-01-01_1d.csv  EBS_2000-01-01_2023-01-01_1d.csv  (+20 more)
envs/: live_env.py  multi_agent_individual_action_portfolio_env.py  multi_agent_portfolio_env.py  multi_agent_shared_action_portfolio_env.py  portfolio_agent_generator.py  portfolio_env.py  simple_multi_agent_env.py  single_agent_portfolio_env.py
eval/: evaluate.py
latex/: 02.tex  05.tex  99_acronyms.tex  acknowledgements.tex  main-thesis.alg  main-thesis.bbl  main-thesis.gls  main-thesis.ist  main-thesis.mth  main-thesis.toc  references.bib
qf/: __init__.py  settings.py
quantforce/: __init__.py
requirements/: export_requirements.py  folderstructure.py  rl_portfolio_env.yml  rl_portfolio_env_full.yml  rl_portfolio_requirements_full.txt
rl_portfolio_framework/: TODO.py  evaluate.py  main.py  train.py
tests/: test_data_manager.py  test_downloader.py  test_get_data.py  test_visual_loader.py
tests_old/: test_portfolio_env.py  test_visual_loader.py
tickers/: get_n_tickers.py  get_tickers.py  plot_ticker.py  valid_tickers.json
train/: logger.py  process.py  replay_buffer.py  run_agent.py  run_agent2.py  train.py
utils/: AssetTracker.py  correlation.py  log_weights.py  metrics.py  plot.py  safari.py  start_tensorboard.py
vis/: process.py
(+357 files in other folders)
