[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qf"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "gymnasium>=1.0.0",
    "stable-baselines3>=2.0.0",
    "yfinance>=0.2.0",
    "PyPortfolioOpt>=1.5.0",
    "pandas-market-calendars>=4.0.0",
    "exchange-calendars>=4.0.0",
    "optuna>=3.0.0",
    "cvxpy>=1.3.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "ccxt>=4.0.0",
    "tensorboard>=2.10.0",
    "wandb>=0.15.0",
    "black>=23.0.0",
    "pytest>=7.0.0",
    "tqdm>=4.64.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "ta>=0.10.0",
    "pyarrow>=10.0.0",
]

[tool.setuptools]
packages = ["qf"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "pandas.*",
    "matplotlib.*",
    "scipy.*",
    "torch.*",
    "gymnasium.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = ["--verbose", "--tb=short"]

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E4", "E7", "E9", "F"]
ignore = ["W291", "W293", "E203", "E501"]
format.enable = false 